--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: auth
+  data:
+    mongodb:
+      host: localhost
+      database: cinemausers
+      port: 27017
 server:
   port: 5000
 logging:
