--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,6 @@
         <module>test-service-1</module>
         <module>test-service-2</module>
         <module>film-service</module>
+        <module>hall-service</module>
     </modules>
 </project>
