Order McS added. Finalize Film McS

--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,6 @@
         <module>test-service-2</module>
         <module>film-service</module>
         <module>hall-service</module>
+        <module>order-service</module>
     </modules>
 </project>
