--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -80,6 +80,15 @@
             <artifactId>joda-time-hibernate</artifactId>
             <version>1.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.hateoas</groupId>
+            <artifactId>spring-hateoas</artifactId>
+            <version>0.24.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-rest</artifactId>
+        </dependency>
 
         <!-- CLOUD -->
         <dependency>
