--- a/seance-service/pom.xml
+++ b/seance-service/pom.xml
@@ -81,7 +81,15 @@
             <artifactId>usertype.jodatime</artifactId>
             <version>2.0.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.hateoas</groupId>
+            <artifactId>spring-hateoas</artifactId>
+            <version>0.24.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-rest</artifactId>
+        </dependency>
         <!-- CLOUD -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
