--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -5,12 +5,13 @@ spring:
     url: jdbc:mysql://localhost:3306/order_mcs
     username: garro
     password: yiZ#gbgVR&HaKd2@GUHk^Vr.
+    driver-class-name: com.mysql.jdbc.Driver
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-#    hibernate:
-#      ddl-auto: validate
+        dialect: org.hibernate.dialect.MySQL5Dialect
+    hibernate:
+      ddl-auto: validate
 security:
   oauth2:
     client:
