--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -26,3 +26,5 @@ zuul:
       url: http://localhost:8080
     test-service-2:
       url: http://localhost:8081
+    film-service:
+      url: http://localhost:8082
