--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -28,3 +28,7 @@ zuul:
       url: http://localhost:8081
     film-service:
       url: http://localhost:8082
+    order-service:
+      url: http://localhost:8084
+    hall-service:
+      url: http://localhost:8083
