add zuul mapping for seance mcs

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -32,3 +32,5 @@ zuul:
       url: http://localhost:8084
     hall-service:
       url: http://localhost:8083
+    seance-service:
+      url: http://localhost:8085
